# yuki-translator

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
config/: glossary.example.json  project.example.json  project.gemini.example.json  project.json  project.openai.example.json
data/input/: sample_script.txt
src/fan_translation/: __init__.py  cli.py  client.py  config.py  pipeline.py  prompts.py  runtime.py  server.py
src/fan_translation/web/: __init__.py  app.js  index.html  styles.css
src/fan_translation_gemma4.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_prompting.py  test_runtime.py  test_server.py  test_web_ui.py
