[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fan-translation-gemma4"
version = "0.0.001"
description = "Yuki Fan Translator beta powered by a configurable local or cloud model."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
fantranslate = "fan_translation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fan_translation.web" = ["*.html", "*.css", "*.js"]
